# cornercheck

./: .env.example  .pre-commit-config.yaml  CLAUDE.md  README.md  docker-compose.yml  pyproject.toml  render.yaml
.github/workflows/: ci.yml
docs/: architecture.md  decisions.md  demo-script.md  devpost-submission.md
docs/demo-assets/: architecture.html
scripts/: judge_canvas.py  z3_proof_demo.py
scripts/spikes/: spike_b_rts.py
seeds/: seed_db.py  seed_demo.py
seeds/data/: curated_suspensions.json
slack/: manifest.json
src/cornercheck/: bootstrap.py  config.py  monitor.py
src/cornercheck/app/: actions.py  assistant.py  canvas.py  context.py  home.py  main.py  mentions.py  parse.py  web.py
src/cornercheck/brain/: agent.py  pipeline.py  schemas.py
src/cornercheck/db/: migrate.py  pool.py  queries.py
src/cornercheck/er/: calibration.json  conformal.py  live_match.py  thresholds.py
src/cornercheck/ledger/: chain.py  store.py  verify.py
src/cornercheck/mcp_server/: server.py
src/cornercheck/rules/: engine.py
src/cornercheck/search/: rts.py
src/cornercheck/session/: state.py
src/cornercheck/sources/: boxing_data.py  corroborate.py
tests/: conftest.py
tests/integration/: test_card_pipeline.py  test_corroboration_pipeline.py  test_dashboard_http.py  test_er_rules_db.py  test_ledger_db.py  test_mcp_server_tools.py  test_pipeline.py
tests/unit/: test_blocks.py  test_boxing_corroboration.py  test_canvas.py  test_config.py  test_handlers.py  test_rules.py
video/scripts/: compose_bed.py
video/src/: Demo.tsx  Root.tsx  beats.ts
(+6 files in other folders)
